only one curve cap is visible while backface culling is enabled #34785

Closed
opened 2013-03-27 13:58:57 +01:00 by Alexander N. · 3 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 SP1 64bit

- Blender version with error, and version that worked ---

blender-2.65a-windows64.zip - has that issue
blender-2.66a-windows64.zip - has that issue
blender-2.66-r55616-win64.zip - has that issue

- Short description of error ---

when i have a curve with bevel_object and use_fill_caps enabled in the viewport only one cap of the curve is visible when show_backface_culling is enabled in the viewport. i think the normals of one of the caps are pointing in the wrong direction.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

create a new scene
add a curve | circle
add a curve | bezier
apply to the bezier curve the curve circle as bevel_object
enable use_fill_caps for the bezier curve
enable on the display show_backface_culling

when you watch both ends of the bezier curve, only one has a cap (or better, the normals of one of the caps pointing in the wrong direction)

%%%

%%%--- Operating System, Graphics card --- Windows 7 SP1 64bit - Blender version with error, and version that worked --- blender-2.65a-windows64.zip - has that issue blender-2.66a-windows64.zip - has that issue blender-2.66-r55616-win64.zip - has that issue - Short description of error --- when i have a curve with bevel_object and use_fill_caps enabled in the viewport only one cap of the curve is visible when show_backface_culling is enabled in the viewport. i think the normals of one of the caps are pointing in the wrong direction. - Steps for others to reproduce the error (preferably based on attached .blend file) --- create a new scene add a curve | circle add a curve | bezier apply to the bezier curve the curve circle as bevel_object enable use_fill_caps for the bezier curve enable on the display show_backface_culling when you watch both ends of the bezier curve, only one has a cap (or better, the normals of one of the caps pointing in the wrong direction) %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev55627. Thanks for the report, closing.%%%

%%%Fixed in svn rev55627. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34785
No description provided.