Fix #34785: only one curve cap is visible while backface culling is enabled

Simply extra normals flip happened.