source/blender/blenkernel/intern/displist.c
@@ -1540,7 +1540,7 @@ static void do_makeDispListCurveTypes(Scene *scene, Object *ob, ListBase *dispba
 						}
 
 						if (bottom_capbase.first) {
-							BKE_displist_fill(&bottom_capbase, dispbase, 1);
+							BKE_displist_fill(&bottom_capbase, dispbase, 0);
 							BKE_displist_fill(&top_capbase, dispbase, 0);
 							BKE_displist_free(&bottom_capbase);
 							BKE_displist_free(&top_capbase);
